--- a/.github/workflows/copy-flow.yml
+++ b/.github/workflows/copy-flow.yml
@@ -76,6 +76,8 @@ jobs:
         for project in $PROJECTS; do
             ASSETS=$(curl -s -u "${{ secrets.WMIO_USERNAME }}:${{ secrets.WMIO_PASSWORD }}" "${{ secrets.WMIO_URL }}/apis/v1/rest/projects/$project/assets")
 
+            echo "Source zip: " $(pwd)/flow-services/${{ github.event.inputs.flowService }}.zip
+
             if echo "$ASSETS" | jq -e --arg flow_service "${{ github.event.inputs.flowService }}" '.flows[] | select(. == $flow_service)' > /dev/null; then
                 # We don't update the flow service in the source project
                 if [ "$project" != "${{ github.event.inputs.sourceProjectId }}" ]; then
