--- a/.github/workflows/copy-flow.yml
+++ b/.github/workflows/copy-flow.yml
@@ -74,14 +74,15 @@ jobs:
 
         # Iterate over the list of projects to import the new flow service version
         for project in $PROJECTS; do
-            ASSETS=$(curl -s -u "${{ secrets.WMIO_USERNAME }}:${{ secrets.WMIO_PASSWORD }}" "${{ secrets.WMIO_URL }}/apis/v1/rest/projects/$project/assets")
+            FLOW_SERVICES=$(curl -s -u "${{ secrets.WMIO_USERNAME }}:${{ secrets.WMIO_PASSWORD }}" "${{ secrets.WMIO_URL }}/apis/v1/rest/projects/$project/assets" | jq -r '.flows[]')
 
-            if echo "$ASSETS" | jq -e --arg flow_service "${{ github.event.inputs.flowService }}" '.flows[] | select(. == $flow_service)' > /dev/null; then
+            # Check if the flow service is in the list of flows using Bash
+            if echo "$FLOW_SERVICES" | grep -q -w "${{ github.event.inputs.flowService }}"; then
                 # We don't update the flow service in the source project
                 if [ "$project" != "${{ github.event.inputs.sourceProjectId }}" ]; then
                     curl -s -u "${{ secrets.WMIO_USERNAME }}:${{ secrets.WMIO_PASSWORD }}" \
                       --request POST "${{ secrets.WMIO_URL }}/apis/v1/rest/projects/$project/flow-import" \
-                      --form "recipe=@$(pwd)/flow-services/${{ github.event.inputs.flowService }}.zip" \
+                      --form "recipe=@$(pwd)/flow-services/${{ github.event.inputs.flowService }}.zip" >/dev/null \
                         && echo "Project $project updated" || echo "Project $project NOT UPDATED"
                 fi
             fi
