--- a/.github/workflows/copy-flow.yml
+++ b/.github/workflows/copy-flow.yml
@@ -38,6 +38,9 @@ jobs:
         mkdir -p flow-services
         curl -s "$DOWNLOAD_LINK" -o flow-services/${{ github.event.inputs.flowService }}.zip
 
+        MD5=$(md5 flow-services/${{ github.event.inputs.flowService }}.zip)
+        echo "ZIP md5 hash: " $MD5
+
         if unzip -t "flow-services/${{ github.event.inputs.flowService }}.zip" >/dev/null 2>&1; then
           echo "Exported flow service zip is valid."
         else
@@ -71,6 +74,9 @@ jobs:
             echo "Failure to retrieve list of projects"
             exit 1
         fi 
+
+        MD5=$(md5 $(pwd)/flow-services/${{ github.event.inputs.flowService }}.zip)
+        echo "ZIP md5 hash: " $MD5
 
         # Iterate over the list of projects to import the new flow service version
         for project in $PROJECTS; do
