--- a/.github/workflows/copy-flow.yml
+++ b/.github/workflows/copy-flow.yml
@@ -14,7 +14,7 @@ on:
         required: true
 
 jobs:
-  export:
+  copy-flow-services:
     runs-on: ubuntu-latest
 
     steps:
@@ -47,22 +47,14 @@ jobs:
           exit 1
         fi
 
+    - name: Push the new definition to vcs
+      run: |        
         # Push the new flow service version to the git remote
         git config --global user.email "actions@github.com"
         git config --global user.name "GitHub Actions"
         git add flow-services/${{ github.event.inputs.flowService }}.zip
         git commit -m "${{ github.event.inputs.commitMessage }}"
         git push
-
-  import:
-    runs-on: ubuntu-latest
-    needs: export
-
-    steps:
-    - name: Check out repository
-      uses: actions/checkout@v4
-      with:
-        token: ${{ secrets.GH_TOKEN }}
 
     - name: Update the flow service definition in all projects where it is used
       run: |
